--- a/testpost.html
+++ b/testpost.html
@@ -16,7 +16,7 @@
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=RUB:UBR RU:RB|alg=U R|flags=startsolved showalg">轉動2</div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="./roofpig_and_three.min.js"></script>
+<script src="https://raw.githubusercontent.com/larspetrus/Roofpig/master/roofpig_and_three.min.js"></script>
 
 </body>
 </html>
