--- a/testpost.html
+++ b/testpost.html
@@ -4,7 +4,7 @@
 	<title>完成</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-  <link rel="stylesheet" href="cube.css"/>
+  <link rel="stylesheet" href="./cube.css"/>
 </head>
 <body>
 
@@ -15,8 +15,8 @@
 <p>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=RUB:UBR RU:RB|alg=U R|flags=startsolved showalg">轉動2</div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://raw.githubusercontent.com/larspetrus/Roofpig/master/roofpig_and_three.min.js"></script>
+<script src="./jquery.min.js"></script>
+<script src="./roofpig_and_three.min.js"></script>
 
 </body>
 </html>
