--- a/2pairs.html
+++ b/2pairs.html
@@ -11,7 +11,8 @@
 <h1>完成2個pairs</h1>
 
 <h2>前言</h2>
-如果只是降群至後面的步驟只需轉動R, U面這還不夠，要充份利用這種只需轉R, U面這種條件，這降群才具說明力。這裡我們是利用組合在R, U層的pair來再進行降群。
+如果只是降群至後面的步驟只需轉動R, U面這還不夠，我們要讓只需轉R, U面這種條件成為助力，而非阻力，這降群才具說服力。這裡我們是利用組合在R, U層的pair來再進行降群。
+<p>
 現在要轉出2個pair，也就是下圖1有顏色的那2個pair。這個步驟的所有轉動皆只轉動R, U面
 <p>
 <div class="roofpig rp180" data-config="colored=UL ULB UR URB|solved=UR-">圖1</div>
@@ -35,7 +36,9 @@
 <h2>用RU組pair轉法組第2個pair</h2>
 觀察第2個pair邊塊與角塊的組合處與第1個pair邊塊與角塊的組合處成對邊方向，所以它用RU組pair轉法的起始點也與第1個pair呈對邊方向，也就是第1個pair的邊塊的起始點在B邊，第2個pair的邊塊的起始點就在F邊
 <p>
-因為你不能破壞剛組好的第1個pair，所以用RU組pair轉法組第2個pair時，要先將已組好的那個pair與要組的邊塊轉至U面並相連接，再將要組新pair的邊塊於U面旋轉至F邊當起始點，再進行RU組pair轉法。如下面範例3及範例4
+因為你不能破壞剛組好的第1個pair，所以用RU組pair轉法組第2個pair時，要先將已組好的那個pair與要組的邊塊轉至U面並相連接，再將要組新pair的邊塊於U面旋轉至F邊當起始點，再進行RU組pair轉法，如下面範例3。
+<p>
+範例4為先觀察角塊須扭轉1次才能於邊塊結合。故先將邊塊轉至離目的地還需旋轉1/4圈的UL處，再進行RU組pair轉法
 <p>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=BLU:UFR UL:UF UBR:UFL RU:LU|alg=R U R' U R2|flags=startsolved showalg">範例3</div>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=BLU:UFR UL:UF UBR:UFL RU:LU|alg=R U R|setupmoves=R' U R|flags=startsolved showalg">範例4</div>
