--- a/ru.html
+++ b/ru.html
@@ -32,16 +32,16 @@
 <p>
 <div class="roofpig rp180" data-config="colored=B L F U R D ULF ULB URF URB DRF DRB|solved=UR-/ce|tweaks=X:DRF X:DRB X:ULB X:URB|setupmoves=U' F R' F' U R' U2">範例1</div>
 
-<h2>一些異線的例子</h2>
+<h2>一些異線的範例</h2>
 下面中同顏色的角塊有X符號表示這2個相鄰的角塊位置互為交換，沒有X符號表示這2個相鄰的角塊位置正確，每個例子都有同顏色的3條線，其中有一條中的角塊位置交換情形和其他2條不一樣，下面用<span class="ye">&emsp;</span>色來表示，這就是我們要找的異線
 <p>
 如果沒有<span class="ye">&emsp;</span>色，那就表示沒有異線
 <p>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=R:DFR R:DBR U:UFR U:UBR X:UFR X:UBR B:UFL B:UBL">圖2</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=U:DFR U:DBR R:UFR R:UBR X:UFR X:UBR B:UFL B:UBL X:UFL X:UBL">圖3</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=R:DFR R:DBR X:DFR X:DBR B:UFR B:UFL X:UFR X:UFL U:UBR U:UBL">圖4</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=U:DFR U:DBR X:DFR X:DBR R:UFR R:UBR B:UFL B:UBL">圖5</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=L:DFR L:DBR X:DFR X:DBR R:UFR R:UBR X:UFR X:UBR B:UFL B:UBL X:UFL X:UBL">圖6</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=R:DFR R:DBR U:UFR U:UBR X:UFR X:UBR B:UFL B:UBL">範例2</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=U:DFR U:DBR R:UFR R:UBR X:UFR X:UBR B:UFL B:UBL X:UFL X:UBL">範例3</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=R:DFR R:DBR X:DFR X:DBR B:UFR B:UFL X:UFR X:UFL U:UBR U:UBL">範例4</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=U:DFR U:DBR X:DFR X:DBR R:UFR R:UBR B:UFL B:UBL">範例5</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=L:DFR L:DBR X:DFR X:DBR R:UFR R:UBR X:UFR X:UBR B:UFL B:UBL X:UFL X:UBL">範例6</div>
 
 <h2>歸還其他非R, U面的旋轉</h2>
 
@@ -89,14 +89,24 @@
 
 如果<span class="ye">&emsp;</span>色表示異線，事實上你不只可以找異線中那兩個角塊，可以跟據<span class="ye">&emsp;</span>色的位置看下面那張圖符合你的位置，用其他相同顏色的那兩個角塊來取代<span class="ye">&emsp;</span>色的那兩個角塊來進行原本異線該進行的工作，也會有降群的效果
 <p>
-例如你的異線位置如果在UFL, UFR，跟據這個位置找到圖10的色恰好在這兩個位置，依據圖10可以用<span class="ye" style="background-color:pink;">&emsp;</span>色的ULB, DRF那兩個角塊，或是<span class="wh">&emsp;</span>色的URB, DRB那兩個角塊來取代原本異線中那兩個角塊
-<p>
 有可替代異線上的角塊會讓你在只能用R, U面旋轉組合壞邊塊時更加的方便
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UFR U:UBR D:DFR D:UFL B:UBL B:DBR">圖7</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:DFR U:DBR D:UFR D:UBL B:UFL B:UBR">圖8</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UBR U:UBL D:UFR D:DFR B:UFL B:DBR">圖9</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UFR U:UFL D:UBR D:DBR B:UBL B:DFR">圖10</div>
-<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UFL U:UBL D:UFR D:DBR B:UBR B:DFR">圖11</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UFR U:UBR D:DFR D:UFL B:UBL B:DBR">圖2</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:DFR U:DBR D:UFR D:UBL B:UFL B:UBR">圖3</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UBR U:UBL D:UFR D:DFR B:UFL B:DBR">圖4</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UFR U:UFL D:UBR D:DBR B:UBL B:DFR">圖5</div>
+<div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=B:pink|tweaks=U:UFL U:UBL D:UFR D:DBR B:UBR B:DFR">圖6</div>
+<p>
+如下面範例7，異線位置會在UFL, UFR，跟據這個位置找到上面圖5的<span class="ye">&emsp;</span>色恰好在這兩個位置，依據上面圖5可以用<span class="ye" style="background-color:pink;">&emsp;</span>色的ULB, DRF那兩個角塊，或是<span class="wh">&emsp;</span>色的URB, DRB那兩個角塊來取代原本異線中那兩個角塊
+<p>
+而<span class="wh">&emsp;</span>色那2個角塊早已剛好連結個壞邊塊，所以我們用<span class="wh">&emsp;</span>色那兩個角塊會比原來的<span class="ye">&emsp;</span>那兩個角塊好用
+<p>
+<div class="roofpig rp180" data-config="colored=B L F U R D UR*|solved=UR-/ce|alg=R' B' R B|setupmoves=U' F R' F' U R' U2 U F R2 U R U' F' R2 U2 R U R' U R2|flags=startsolved showalg">範例7</div>
+<div class="hor">
+  <ul>
+  <li>第1轉轉為轉動4前的狀態</li>
+  <li>第2~4轉為轉動4</li>
+  </ul>
+</div>
 
 <p>
 下一步：<a href="2pairs.html">完成2個pairs</a> <a href="index.html">總目錄</a>
