--- a/ru.html
+++ b/ru.html
@@ -25,8 +25,7 @@
 
 <h2>尋找異線</h2>
 
-現在D面是<span class="wh">&emsp;</span>色的，先將有<span class="wh">&emsp;</span>色的2個角塊轉到DRF, DRB這兩個位置，誰在位置DRF或誰在位置DRB並沒有關係
-因為U面是<span class="ye">&emsp;</span>色的，所以剩下4個角塊都不考慮<span class="ye">&emsp;</span>色，只觀看其他顏色。如果發現有相鄰的2個角塊有相同非<span class="ye">&emsp;</span>色的其他顏色，假如是<span class="re">&emsp;</span>色，我們就用U面旋轉將這2個角塊皆轉到<span class="re">&emsp;</span>色那一面，就像是下面範例1，你會發現都有白色的相鄰兩個角塊位置互為交換，<span class="ye">&emsp;</span>面上有<span class="re">&emsp;</span>色相鄰的這2個角塊位置正確，<span class="ye">&emsp;</span>面剩下那兩個角塊則剛好位置互為交換，這裡用X符號表示這2個相鄰的角塊位置互為交換，沒有X符號表示這2個相鄰的角塊位置正確
+現在D面是<span class="wh">&emsp;</span>色的，先將有<span class="wh">&emsp;</span>色的2個角塊轉到DRF, DRB這兩個位置，誰在位置DRF或誰在位置DRB並沒有關係。因為U面是<span class="ye">&emsp;</span>色的，所以剩下4個角塊都不考慮<span class="ye">&emsp;</span>色，只觀看其他顏色。如果發現有相鄰的2個角塊有相同非<span class="ye">&emsp;</span>色的其他顏色，假如是<span class="re">&emsp;</span>色，我們就用U面旋轉將這2個角塊皆轉到<span class="re">&emsp;</span>色那一面，就像是下面範例1，你會發現都有白色的相鄰兩個角塊位置互為交換，<span class="ye">&emsp;</span>面上有<span class="re">&emsp;</span>色相鄰的這2個角塊位置正確，<span class="ye">&emsp;</span>面剩下那兩個角塊則剛好位置互為交換，這裡用X符號表示這2個相鄰的角塊位置互為交換，沒有X符號表示這2個相鄰的角塊位置正確
 <p>
 這裡會有3條線，其中2條中的角塊位置是互為交換的，而有1條跟其他2條不一樣，這條中角塊的位置是正確的，而不是互為交換的，那條跟其他2條不一樣的線就是異線，異線中的那2個角塊就是我們要找的，在下面範例1中就是UFL, UFR這兩個角塊
 <p>
