--- a/4pairs.html
+++ b/4pairs.html
@@ -21,13 +21,19 @@
 <h2>前往中繼站</h2>
 組第4個pair時，先將所有已做好的前3個pair全部轉到同一層，並且有互相連接的那兩個pair在旋轉另一面時要能完全分離，這樣的形狀就是下面圖3。已做好的前3個pair皆可視為相同。而要組新pair的角塊位置則會因此固定在圖3有顏色的那個位置。接下的轉動前後結果舊pair的位置形狀皆不改變
 <p>
-為方便下面解說，這裡中繼站M為圖4中的<span class="ibx">X</span>符號位置
-<p>
-中繼站N為圖5中的<span class="ibx">X</span>符號位置
+為方便下面解說，
+<br>
+這裡中繼站M為圖4中的<span class="ibx">X</span>符號位置，中繼站N為圖5中的<span class="ibx">X</span>符號位置
 <p>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UB x:UBL x:UF x:UFL x:UR x:URF FRU:FDR|flags=startsolved showalg">圖3</div>
+<div class="hors">
+中繼站M
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UB x:UBL x:UF x:UFL x:UR x:URF X:UL|flags=startsolved showalg">圖4</div>
+</div>
+<div class="hors">
+中繼站N
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UB x:UBL x:UF x:UFL x:UR x:URF X:RB|flags=startsolved showalg">圖5</div>
+</div>
 <dl>
 <dt>前往中繼站M</dt>
 <dd>
@@ -45,14 +51,14 @@
 <h2>中繼站的邊塊與新pair的角塊組合新pair</h2>
 <dl>
 <dt>
-在要組合新pair的角塊上，與要組合邊塊同色的面是下圖6有<span class="sa">X</span>符號的面，則須使用中繼站N，這也算是RU組pair轉法
+在要組合新pair的角塊上，與要組合邊塊同色的面是下圖6有<span class="sa">X</span>符號的面，則須與中繼站N上的邊塊組合
 </dt>
 <dd>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=D:salmon|tweaks=x:UB x:UBL x:UF x:UFL x:UR x:URF D:RB D:FDR X:FdR|flags=startsolved showalg">圖6</div>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=x:UB x:UBL x:UF x:UFL x:UR x:URF FU:RB FRU:FDR|alg=R2 U|flags=startsolved showalg">轉動6</div>
 </dd>
 <dt>
-在要組合新pair的角塊上，與要組合邊塊同色的面是下圖7有<span class="sa">X</span>符號的面，則須使用中繼站M
+在要組合新pair的角塊上，與要組合邊塊同色的面是下圖7有<span class="sa">X</span>符號的面，則須與中繼站M上的邊塊組合
 </dt>
 <dd>
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|colors=D:salmon|tweaks=x:UB x:UBL x:UF x:UFL x:UR x:URF D:UL D:FDR X:fDR|flags=startsolved showalg">圖7</div>
@@ -91,7 +97,7 @@
 </dl>
 
 <p>
-下一步：<a href="exblock.html">拓展成3個pairs與1個1x2x2區塊</a> <a href="index.html">總目錄</a>
+下一步：<a href="exblock.html">拓展成3個pairs與1個1x2x2區塊</a> <a href="index.html">RUP解法</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUP解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
 
