--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
-
+<div class="lan">
+<a href="index_eng.html">English</a>
+</div>
 <h1>魔術方塊的RUP解法</h1>
 作者：吳宗諺
 
 <h2>簡介</h2>
-這裡是一個魔術方塊解法的教學網站，教的方法是我創作的新方法，這個方法第一步和<a href="http://lar5.com/cube" target="_blank">Petrus方法</a>一樣也是做一個2x2x3區塊，但接下來的步驟沒有一個和<a href="http://lar5.com/cube" target="_blank">Petrus方法</a>一樣，整體內涵也差別甚大，<a href="http://lar5.com/cube" target="_blank">Petrus方法</a>還是要完成前2層，和CFOP法比較相近。現在介紹這個方法是個降群法，降為R, U面旋轉群及不破壞已完成pairs的群，沒有F2L，更不會有PLL、OLL，而且有些步驟有其創意。所以我給它一個新名稱，Reduce R, U face rotations group and retain Pairs，簡稱RUP法。
+這裡是一個魔術方塊解法的教學網站，教的方法是我創作的新方法。
+<p>
+這個方法第一步和Petrus方法一樣也是做一個2x2x3區塊，但接下來的步驟沒有一個和Petrus方法一樣，整體內涵也差別甚大，Petrus方法還是要完成前2層，和CFOP法比較相近。現在介紹這個方法是個降群法，降為R, U面旋轉群及不破壞已完成pairs的群，沒有F2L，更不會有PLL、OLL，而且有些步驟有其創意。
+<p>
+所以我給它一個新名稱，「Reduce R, U face rotations group and retain Pairs」，簡稱「RUP法」。
 <p>
 這裡的位置與旋轉使用符號是使用目前廣為通行的<a href="https://ruwix.com/the-rubiks-cube/notation/advanced/" target="_blank">符號寫法</a>。
 
