--- a/2pairs_eng.html
+++ b/2pairs_eng.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>Complete 2 pairs</title>
+	<title>Reducing to the group of retaining 2 pairs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>Complete 2 pairs</h1>
+<h1>Reducing to the group of retaining 2 pairs</h1>
 
 <h2>Foreword</h2>
 If you just reducing group that just rotate R, U faces to the next step, is not enough, we have to let only rotating R, U faces this condition becomes boost, not resistance, then the reducing group will have persuasive. Here we use the pair combined in the R, U layers to further reducing group.
@@ -45,7 +45,7 @@ In the case of Example 4, the corner must be twisted once to combine the edge. T
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=BLU:UFR UL:UF UBR:UFL RU:LU|alg=R U R|setupmoves=R' U R|flags=startsolved showalg">Example 4</div>
 
 <p>
-next: <a href="3pairs_eng.html">Complete the third pair</a> <a href="index_eng.html">The RUP Method</a>
+next: <a href="3pairs_eng.html">Reducing to the group of retaining 3 pairs</a> <a href="index_eng.html">The RUP Method</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
 
