--- a/3pairs_eng.html
+++ b/3pairs_eng.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>Complete the third pair</title>
+	<title>Reducing to the group of retaining 3 pairs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>Complete the third pair</h1>
+<h1>Reducing to the group of retaining 3 pairs</h1>
 
 <h2>Foreword</h2>
 <p>
@@ -147,7 +147,7 @@ The left side of the example is the twisting orientation of position UFL, UFR, D
 </div>
 
 <p>
-next: <a href="4pairs_eng.html">Complete the 4th pair</a> <a href="index_eng.html">The RUP Method</a>
+next: <a href="4pairs_eng.html">Reducing to the group of retaining 4 pairs</a> <a href="index_eng.html">The RUP Method</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
 
