--- a/4pairs_eng.html
+++ b/4pairs_eng.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>Complete the 4th pair</title>
+	<title>Reducing to the group of retaining 4 pairs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>Complete the 4th pair</h1>
+<h1>Reducing to the group of retaining 4 pairs</h1>
 
 <h2>Foreword</h2>
 Now to make the 4th pair, it is one of the two pairs in the figure below. The <span class="iwx">X</span> symbol is the 3 pairs that have been prepared before.
@@ -95,7 +95,7 @@ In the following example 2, the color of the edge of the new pair can be <span c
 </dl>
 
 <p>
-next: <a href="exblock_eng.html">Expand into 3 pairs and 1 1x2x2 block</a> <a href="index_eng.html">The RUP Method</a>
+next: <a href="exblock_eng.html">Reducing to the group of retaining 3 pairs and 1 1x2x2 block</a> <a href="index_eng.html">The RUP Method</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
 
