--- a/exblock.html
+++ b/exblock.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>拓展成3個pairs與1個1x2x2區塊</title>
+	<title>降群為保留3個pairs與1個1x2x2區塊的群</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>拓展成3個pairs與1個1x2x2區塊</h1>
+<h1>降群為保留3個pairs與1個1x2x2區塊的群</h1>
 
 <h2>前言</h2>
 接下來其實沒多少轉動可以選擇。要將已做好的其中1個pair拓展成1個1x2x2的區塊，必須是下面有顏色的1x2x2的區塊其中之一。有X符號的部份為之前已做好的4個pair。
