--- a/exblock_eng.html
+++ b/exblock_eng.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>Expand into 3 pairs and 1 1x2x2 block</title>
+	<title>Reducing to the group of retaining 3 pairs and 1 1x2x2 block</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>Expand into 3 pairs and 1 1x2x2 block</h1>
+<h1>Reducing to the group of retaining 3 pairs and 1 1x2x2 block</h1>
 
 <h2>Foreword</h2>
 In the end, there is actually not many moves to choose from. To expand one of the completed pairs into a 1x2x2 block, it must be one of the colored 1x2x2 blocks below. The part with the X symbol is the 4 pairs that have been prepared before.
