--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p>
 這個方法第一步和Petrus方法一樣也是做一個2x2x3區塊，但接下來的步驟沒有一個和Petrus方法一樣，整體內涵也差別甚大，Petrus方法還是要完成前2層，和CFOP法比較相近。現在介紹這個方法是個降群法，降為R, U面旋轉群及不破壞已完成pairs的群，沒有F2L，更不會有PLL、OLL，而且有些步驟有其創意。
 <p>
-所以我給它一個新名稱，「Reduce R, U face rotations group and retain Pairs」，簡稱「RUP法」。
+所以我給它一個新名稱，「Reduce to R, U face rotations group and retain Pairs group」，簡稱「RUP法」。
 <p>
 這裡的位置與旋轉使用符號是使用目前廣為通行的<a href="https://ruwix.com/the-rubiks-cube/notation/advanced/" target="_blank">符號寫法</a>。
 
@@ -27,11 +27,11 @@
 步驟一難度不高，<a href="http://lar5.com/cube" target="_blank">Petrus方法</a>的網站中的第一、二步寫得很詳盡，這裡不再贅述。
 <ul>
 <li>步驟一，完成一個2x2x3區塊</li>
-<li>步驟二，<a href="ru.html">降群為R, U面旋轉</a></li>
-<li>步驟三，<a href="2pairs.html">完成2個pairs</a></li>
-<li>步驟四，<a href="3pairs.html">完成第3個pair</a></li>
-<li>步驟五，<a href="4pairs.html">完成第4個pair</a></li>
-<li>步驟六，<a href="exblock.html">拓展成3個pairs與1個1x2x2區塊</a></li>
+<li>步驟二，<a href="ru.html">降群為R, U面旋轉的群</a></li>
+<li>步驟三，<a href="2pairs.html">降群為保留2個pairs的群</a></li>
+<li>步驟四，<a href="3pairs.html">降群為保留3個pairs的群</a></li>
+<li>步驟五，<a href="4pairs.html">降群為保留4個pairs的群</a></li>
+<li>步驟六，<a href="exblock.html">降群為保留3個pairs與1個1x2x2區塊的群</a></li>
 </ul>
 
 <h2>關於我</h2>
