--- a/index_eng.html
+++ b/index_eng.html
@@ -19,18 +19,18 @@ Here is a teaching website for the Rubik's Cube solution. The teaching method is
 <p>
 The first step of this method is to do a 2x2x3 block as well as the Petrus method, but all the rest steps is not the same as the Petrus method. There is also a difference of essence. The Petrus method still has to complete the first two layers, which is similar to the CFOP method. Now introduce this method is a group reducing method, reduced to the R, U face rotations group and the group that does not destroy completed pairs, no F2L, no PLL, OLL, and some steps have their own ideas.
 <p>
-So I give it a new name, "Reduce R, U face rotations group and retain Pairs", referred to as the "RUP method".
+So I give it a new name, "Reduce to R, U face rotations group and retain Pairs group", referred to as the "RUP method".
 
 <h2>The Method</h2>
 
-Step 1 is not difficult. The first and second steps in the Petrus method website are very detailed and will not be repeated here.
+Step 1 is not difficult. The first and second steps in the <a href="http://lar5.com/cube" target="_blank">Petrus method</a> website are very detailed and will not be repeated here.
 <ul>
 <li>Step 1, complete a 2x2x3 block</li>
 <li>Step 2, <a href="ru_eng.html">Reducing to R, U face rotations group</a>.</li>
-<li>Step 3, <a href="2pairs_eng.html">complete 2 pairs</a></li>
-<li>Step 4, <a href="3pairs_eng.html">complete the third pair</a></li>
-<li>Step 5, <a href="4pairs_eng.html">complete the 4th pair</a></li>
-<li>Step 6, <a href="exblock_eng.html">expand into 3 pairs and 1 1x2x2 block</a></li>
+<li>Step 3, <a href="2pairs_eng.html">Reducing to the group of retaining 2 pairs</a></li>
+<li>Step 4, <a href="3pairs_eng.html">Reducing to the group of retaining 3 pairs</a></li>
+<li>Step 5, <a href="4pairs_eng.html">Reducing to the group of retaining 4 pairs</a></li>
+<li>Step 6, <a href="exblock_eng.html">Reducing to the group of retaining 3 pairs and 1 1x2x2 block</a></li>
 </ul>
 
 <h2>About Me</h2>
