--- a/2pairs.html
+++ b/2pairs.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>完成2個pairs</title>
+	<title>降群為保留2個pairs的群</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>完成2個pairs</h1>
+<h1>降群為保留2個pairs的群</h1>
 
 <h2>前言</h2>
 如果只是降群至後面的步驟只需轉動R, U面這還不夠，我們要讓只需轉R, U面這種條件成為助力，而非阻力，這降群才具說服力。這裡我們是利用組合在R, U層的pair來再進行降群。
@@ -44,7 +44,7 @@
 <div class="roofpig rp180" data-config="colored=D|solved=UR-|tweaks=BLU:UFR UL:UF UBR:UFL RU:LU|alg=R U R|setupmoves=R' U R|flags=startsolved showalg">範例4</div>
 
 <p>
-下一步：<a href="3pairs.html">完成第3個pair</a> <a href="index.html">RUP解法</a>
+下一步：<a href="3pairs.html">降群為保留3個pairs的群</a> <a href="index.html">RUP解法</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUP解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
 
