--- a/ru.html
+++ b/ru.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-	<title>降群為R, U面旋轉</title>
+	<title>降群為R, U面旋轉的群</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link rel="stylesheet" href="cube.css"/>
 </head>
 <body>
 
-<h1>降群為R, U面旋轉</h1>
+<h1>降群為R, U面旋轉的群</h1>
 
 <h2>前言</h2>
 這裡提供一個方法來退還所有其他非R, U面的旋轉，讓以後只用U, R面旋轉就可以轉回六面，所以才能讓RUP方法成為一種降群法，這也是和Petrus方法最大的分野，而且這個方法要簡便好用才行
@@ -110,7 +110,7 @@
 </div>
 
 <p>
-下一步：<a href="2pairs.html">完成2個pairs</a> <a href="index.html">RUP解法</a>
+下一步：<a href="2pairs.html">降群為保留2個pairs的群</a> <a href="index.html">RUP解法</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/tw/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">魔術方塊的RUP解法</span>由<a xmlns:cc="http://creativecommons.org/ns#" href="https://www.facebook.com/presleykimo" property="cc:attributionName" rel="cc:attributionURL">吳宗諺</a>製作，以<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/tw/">創用CC 姓名標示-非商業性-禁止改作 3.0 台灣 授權條款</a>釋出。
 
