--- a/ru_eng.html
+++ b/ru_eng.html
@@ -116,7 +116,7 @@ The two corners at position URB, DRB have already just connected a bad edge, so 
 </div>
 
 <p>
-next: <a href="2pairs_eng.html">complete 2 pairs</a> <a href="index_eng.html">The RUP Method</a>
+next: <a href="2pairs_eng.html">Reducing to the group of retaining 2 pairs</a> <a href="index_eng.html">The RUP Method</a>
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
 
